[tool.poetry]
name = "pydglab"
version = "1.0.0"
description = "A Third-party DGLAB Python Driver"
authors = ["Shilapi <pi@lapiw.icu>"]
license = "GNU GPLv3"
readme = "README.md"
repository = "https://github.com/shilapi/DGLAB-python-driver"


[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.22.1"
bitstring = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
